# rusty_board

./: .env  Cargo.toml  Readme.md
DockerSetup/: Dockerfile
entity/: Cargo.toml
entity/src/: lib.rs  site_users.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs  main.rs
src/data/: card.rs
src/data/card/: card_request.rs  card_response.rs  card_update_request.rs  create_card.rs  delete_card.rs  get_all_cards.rs  mod.rs  patch_card.rs  put_card.rs  select_card_by_id.rs
src/entity/: card.rs  mod.rs  prelude.rs
src/routes/: always_errors.rs  create_card.rs  mirror_body.rs  mirror_user_agent.rs  mod.rs  query_parameter.rs  returns_201.rs
src/routes_old/: custom_json_extractor.rs  get_json.rs  hello_world.rs  middleware_custom_header.rs  middleware_message.rs  mirror_body.rs  mirror_body_json.rs  mod.rs
src/utils/: app_error.rs
