workspace = { members = [".","migration"] }
[package]
name = "rusty_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sea-orm]
version = "0.12.12" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]

[dependencies]
migration = {path = "migration"}
axum = "0.7.4"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["cors"] }
validator = { version = "0.16.1", features = ["derive"] }
chrono = "0.4.33"
serde_with = "3.6.1"
